--- a/secret-hitler.cabal
+++ b/secret-hitler.cabal
@@ -15,10 +15,10 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
-executable secret-hitler
-  main-is:             Main.hs
-  -- other-modules:       
-  other-extensions:    OverloadedStrings
-  build-depends:       base >=4.7 && <4.8, monad-parallel, random-shuffle, websockets, networked-game-engine, random >=1.1 && <1.2
+library
+  exposed-modules:     Game.SecretHitler.SecretHitler
+  other-modules:       Game.SecretHitler.SecretData, Game.SecretHitler.SecretUtility
+  -- other-extensions:    
+  build-depends:       base >=4.7 && <4.8, networked-game-engine >=0.1 && <0.2, random >=1.1 && <1.2, monad-parallel >=0.7 && <0.8, websockets >=0.9 && <0.10, random-shuffle >=0.0 && <0.1
   hs-source-dirs:      src
   default-language:    Haskell2010
