Fixed Cabal Depends

--- a/secret-hitler.cabal
+++ b/secret-hitler.cabal
@@ -19,6 +19,6 @@ library
   exposed-modules:     Game.SecretHitler.SecretHitler
   other-modules:       Game.SecretHitler.SecretData, Game.SecretHitler.SecretUtility
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8, networked-game-engine >=0.1 && <0.2, random >=1.1 && <1.2, monad-parallel >=0.7 && <0.8, websockets >=0.9 && <0.10, random-shuffle >=0.0 && <0.1
+  build-depends:       base, networked-game-engine >=0.1 && <0.2, random, monad-parallel, websockets, random-shuffle
   hs-source-dirs:      src
   default-language:    Haskell2010
